v0.5.1 refactored to prevent unnecessary overflow for the x and y on the Dashboard page.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -494,8 +494,10 @@ ul > li:nth-child(2) > a:hover {
 /***************************************** END: CREATEREMINDER.JS ********************************/
 /***************************************** START: REMINDERS.JS ***********************************/
 .reminders-container {
-  height: 75vh;
+  height: 100%;
+  width: auto;
   text-align: center;
+  overflow-x: hidden;
 }
 
 #reminders-table-row {
